<resources>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="a_action_3rd_party_apps_allowed">Allowed</string>
    <string name="a_action_3rd_party_apps_blocked">Blocked</string>
    <string name="a_action_3rd_party_apps_install">Install</string>
    <string name="a_action_3rd_party_apps_navigate_to_message">Navigate To Message Settings</string>
    <string name="a_action_3rd_party_apps_not_as_default">Not As Default</string>
    <string name="a_action_3rd_party_apps_not_show_again">"Don't show again"</string>
    <string name="a_action_3rd_party_apps_set_as_default">Set As Default</string>
    <string name="a_action_3rd_party_apps_setup">Setup</string>
    <string name="a_action_3rd_party_apps_try_it">Try It</string>
    <string name="a_action_acted">Acted</string>
    <string name="a_action_cch_device_activation">Device Activation</string>
    <string name="a_action_cch_device_dynamics">Device Dynamics</string>
    <string name="a_action_cch_setting_dynamics">Setting Dynamics</string>
    <string name="a_action_executed">Executed</string>
    <string name="a_action_identification_changed">Identification Changed</string>
    <string name="a_action_missed_call_overlay_action_taken">Action Taken</string>
    <string name="a_action_missed_call_overlay_displayed_blocked">Displayed Blocked</string>
    <string name="a_action_missed_call_overlay_displayed_missed">Displayed Missed</string>
    <string name="a_action_received">Received</string>
    <string name="a_action_setting_dynamics_blocking_conflict_priority">Blocking Conflict Priority</string>
    <string name="a_action_setting_dynamics_blocking_l1">Blocking Line 1</string>
    <string name="a_action_setting_dynamics_blocking_l2">Blocking Line 2</string>
    <string name="a_action_setting_dynamics_blocking_similar_numbers">Blocking Spoofed Similar Numbers</string>
    <string name="a_action_setting_dynamics_custom_call_screen_ui">Custom Call Screen UI</string>
    <string name="a_action_setting_dynamics_messaging_app">Messaging App</string>
    <string name="a_action_setting_dynamics_phone_app">Phone App</string>
    <string name="a_action_setting_dynamics_total">Users Total</string>
    <string name="a_action_shown">Shown</string>
    <string name="a_action_synchronization">Synchronization</string>
    <string name="a_automatic">Automatic</string>
    <string name="a_blocking">Blocking</string>
    <string name="a_call">Call</string>
    <string name="a_calls">Calls</string>
    <string name="a_category_3rd_party_apps">Third Party Apps</string>
    <string name="a_category_cch">Call Control Home</string>
    <string name="a_category_identification">Identification</string>
    <string name="a_category_missed_call_overlay">Missed Call Overlay</string>
    <string name="a_category_setting_dynamics">Setting Dynamics</string>
    <string name="a_custom_call_screen">Custom Call Screen</string>
    <string name="a_custom_call_screen_ui_disable">Custom Call Screen UI Disabled</string>
    <string name="a_custom_call_screen_ui_enable">Custom Call Screen UI Enabled</string>
    <string name="a_dialer_mode_disable">Dialer Mode Disable</string>
    <string name="a_dialer_mode_enable">Dialer Mode Enable</string>
    <string name="a_fresh_start">Fresh Start</string>
    <string name="a_general">General</string>
    <string name="a_incoming">Incoming</string>
    <string name="a_install">Install</string>
    <string name="a_label_missed_call_overlay_allow">Allow</string>
    <string name="a_label_missed_call_overlay_block">Block</string>
    <string name="a_label_missed_call_overlay_block_alphanumeric">Block Alphanumeric</string>
    <string name="a_label_missed_call_overlay_block_private">Block Private</string>
    <string name="a_label_missed_call_overlay_block_unknown">Block Unknown</string>
    <string name="a_label_missed_call_overlay_call">Call</string>
    <string name="a_label_missed_call_overlay_free">Free</string>
    <string name="a_label_missed_call_overlay_premium">Premium</string>
    <string name="a_label_missed_call_overlay_report">Report</string>
    <string name="a_label_missed_call_overlay_save_to_contacts">Save to Contacts</string>
    <string name="a_label_missed_call_overlay_sms">SMS</string>
    <string name="a_label_missed_call_overlay_unblock_alphanumeric">Unblock Alphanumeric</string>
    <string name="a_label_missed_call_overlay_unblock_private">Unblock Private</string>
    <string name="a_label_missed_call_overlay_unblock_unknown">Unblock Unknown</string>
    <string name="a_label_setting_dynamics_blocked_call_notification">Show Blocked Calls-n-Messages Notification</string>
    <string name="a_label_setting_dynamics_free">Free</string>
    <string name="a_label_setting_dynamics_missed_call_notification">Show Missed Calls Notification</string>
    <string name="a_label_setting_dynamics_premium_enh">Premium with Enhanced</string>
    <string name="a_label_setting_dynamics_premium_not_enh">Premium without Enhanced</string>
    <string name="a_label_sync_finished">Sync Finished</string>
    <string name="a_label_sync_started">Sync Started</string>
    <string name="a_language">Language</string>
    <string name="a_language_system">Setup Language</string>
    <string name="a_language_to">Change Language to %1$s</string>
    <string name="a_leave_review_N_blocked_calls">Review Prompt - Calls Blocked - %1$s</string>
    <string name="a_leave_review_N_placed_calls">Review Prompt - Calls Placed - %1$s</string>
    <string name="a_leave_review_N_sms">Review Prompt - Messages Received - %1$s</string>
    <string name="a_lookup">Lookup</string>
    <string name="a_lookup_action">%1$s Lookup</string>
    <string name="a_lookup_failure">Network Failure</string>
    <string name="a_lookup_nodata">No Data</string>
    <string name="a_lookup_ok">Data Found</string>
    <string name="a_mms">MMS</string>
    <string name="a_negative">Negative</string>
    <string name="a_number_dialed">Number Dialed</string>
    <string name="a_phone_app">Phone App</string>
    <string name="a_positive">Positive</string>
    <string name="a_promt_to_change_blockmode">Block Mode Affordances</string>
    <string name="a_purchase">Purchase</string>
    <string name="a_push_notification">Push Notification</string>
    <string name="a_push_notification_acted">User Acted</string>
    <string name="allow_contact_permission_title">Enable Contacts Integration!</string>
    <string name="block_report_advanced_btn">Advanced</string>
    <string name="btn_cc_allow_contacts_permission">Allow Access to Contacts</string>
    <string name="caller_name">Caller Name</string>
    <string name="caller_number_hint">"Caller's Phone Number"</string>
    <string name="cancel_btn">Cancel</string>
    <string name="cca_title">Call Control</string>
    <string name="comments_placeholder">Please provide details about the call here… we love details!</string>
    <string name="complaint_title">Spam Report</string>
    <string name="contactImagePlaceholder">contactImagePlaceholder</string>
    <string name="create_account_agree_with_privacy_policy_social">By joining via your social media account,&lt;br>you agree to &lt;a href=%1$s>Terms of Service&lt;/a> and &lt;a href=%2$s>Privacy Policy&lt;/a></string>
    <string name="create_account_subtitle">Log in or Sign up to continue</string>
    <string name="create_account_subtitle1">Why should I create account?</string>
    <string name="create_account_text">"Get access to the best protection from robocalls
and scams and submit call reports to block unwanted calls"</string>
    <string name="create_account_title">Join Our Community</string>
    <string name="detail">detail</string>
    <string name="facebook">Facebook</string>
    <string name="field_email">Email</string>
    <string name="google">Google</string>
    <string name="howToBlock">How To Block</string>
    <string name="howToBlockText" />
    <string name="menu_item_emptyList">Clear List</string>
    <string name="menu_item_help">Get Help</string>
    <string name="menu_item_hide_blocked">Hide Blocked</string>
    <string name="menu_item_hide_cchdevice">Hide Home phone calls</string>
    <string name="menu_item_lookup">Lookup</string>
    <string name="menu_item_saveList">Save List</string>
    <string name="menu_item_send_message">Send Message</string>
    <string name="menu_item_show_blocked">Show Blocked</string>
    <string name="menu_item_show_cchdevice">Show Home phone calls</string>
    <string name="menu_item_to_allowedlist">Allowed List</string>
    <string name="menu_item_to_blacklist">Blocked List</string>
    <string name="menu_item_to_blocklist">Add to Block List</string>
    <string name="messageBlockingAttention">To block messages you should be integrated with <a href="">QKSMS</a></string>
    <string name="mobile">mobile</string>
    <string name="msg_listEmpty">This list is empty</string>
    <string name="ok_got_it">Ok, Got It</string>
    <string name="pane_block">Set Number to Block List</string>
    <string name="pane_complaint">Report contact</string>
    <string name="pane_edit">Edit contact</string>
    <string name="pane_message">Text contact</string>
    <string name="pane_white">Set Number to Allow List</string>
    <string name="recentcall_additional_menu_item_add_contact">Add to Contacts</string>
    <string name="recentcall_additional_menu_item_allow">Always Allow</string>
    <string name="recentcall_additional_menu_item_block">Block &amp; Report</string>
    <string name="recentcall_additional_menu_item_call">Call</string>
    <string name="recentcall_additional_menu_item_details">More Details</string>
    <string name="recentcall_additional_menu_item_lookup">Lookup</string>
    <string name="recentcall_additional_menu_item_message">Message</string>
    <string name="recentcall_additional_menu_item_remove">Remove</string>
    <string name="report_spam_dialog">Blocked!</string>
    <string name="report_spam_hint">Help us by providing some additional information about this caller. Tap anywhere to dismiss.</string>
    <string name="send">Send</string>
    <string name="sign_in_agree_login_trouble">Having trouble logging in? &lt;a href=>Click here to send Support Request&lt;/a></string>
    <string name="textstub">+1(202)555–0–1932</string>
    <string name="timestub">12:00 am</string>
    <string name="why_do_i_need_account">"Creating an account is required for you to finish getting started.
We require an account to be created so that we can:"</string>
    <string name="why_do_i_need_account_details_1">"customize the call blocking
experience for you"</string>
    <string name="why_do_i_need_account_details_2">"answer your support questions
more accurately"</string>
    <string name="why_do_i_need_account_details_3">ensure that your personal blocklist travels with you when you get a new phone</string>
    <string name="why_do_i_need_an_account">Why do I need an account?</string>
</resources>