<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/plus_top_level" android:visible="false" android:orderInCategory="100" android:title="@string/menu_item_send_message" />
    <item android:id="@id/lookup_top_level" android:visible="false" android:orderInCategory="100" android:title="@string/menu_item_lookup" />
    <item android:id="@id/block_top_level" android:visible="false" android:orderInCategory="100" android:title="@string/menu_item_to_blocklist" />
    <item android:id="@id/to_blacklist" android:orderInCategory="100" android:title="@string/menu_item_to_blacklist" />
    <item android:id="@id/to_allowedlist" android:orderInCategory="100" android:title="@string/menu_item_to_allowedlist" />
    <item android:id="@id/hide_blocked" android:orderInCategory="100" android:title="@string/menu_item_hide_blocked" />
    <item android:id="@id/show_blocked" android:orderInCategory="100" android:title="@string/menu_item_show_blocked" />
    <item android:id="@id/hide_cchdevice" android:orderInCategory="100" android:title="@string/menu_item_hide_cchdevice" />
    <item android:id="@id/show_cchdevice" android:orderInCategory="100" android:title="@string/menu_item_show_cchdevice" />
    <item android:id="@id/saveList" android:orderInCategory="100" android:title="@string/menu_item_saveList" />
    <item android:id="@id/emptyList" android:orderInCategory="100" android:title="@string/menu_item_emptyList" />
    <item android:id="@id/help" android:orderInCategory="100" android:title="@string/menu_item_help" />
</menu>