<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="48.0dip" android:layout_marginBottom="@dimen/height_48dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/report_spam_dialog" />
    <TextView android:textSize="14.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/report_spam_hint" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:background="@android:color/transparent" android:layout_width="26.0dip" android:layout_height="26.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/ic_call_device" android:contentDescription="@string/complaint_title" />
        <EditText android:theme="@style/EditTextTheme" android:enabled="false" android:id="@id/phone_num" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:hint="@string/caller_number_hint" android:maxLength="19" android:inputType="phone" style="@style/spinner" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:background="@android:color/transparent" android:layout_width="26.0dip" android:layout_height="26.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/ic_contact" android:contentDescription="@string/complaint_title" />
        <EditText android:theme="@style/EditTextTheme" android:id="@id/call_mame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:hint="@string/caller_name" android:maxLength="255" android:inputType="textCapSentences" style="@style/spinner" />
    </LinearLayout>
    <Spinner android:id="@id/type" android:layout_width="fill_parent" android:layout_height="@dimen/height_48dp" android:layout_marginBottom="8.0dip" android:prompt="@string/cca_title" style="@style/spinner" />
    <EditText android:theme="@style/EditTextTheme" android:textColor="@color/darkgrey_fontcolor" android:ellipsize="none" android:id="@id/spam_comment" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/comments_placeholder" android:maxLines="5" android:minLines="3" android:maxLength="65535" android:inputType="textCapSentences|textMultiLine" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:id="@id/advanced_btn" android:paddingLeft="16.0dip" android:paddingTop="32.0dip" android:paddingRight="16.0dip" android:paddingBottom="32.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/block_report_advanced_btn" android:layout_weight="1.0" android:textAllCaps="true" />
        <TextView android:textSize="14.0sp" android:id="@id/cancel_btn" android:paddingLeft="16.0dip" android:paddingTop="32.0dip" android:paddingRight="16.0dip" android:paddingBottom="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_btn" android:layout_weight="1.0" android:textAllCaps="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/light_blue" android:gravity="right" android:id="@id/send" android:paddingLeft="16.0dip" android:paddingTop="32.0dip" android:paddingRight="16.0dip" android:paddingBottom="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send" android:layout_weight="1.0" android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>