<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:id="@id/item" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/call_info" android:paddingLeft="16.0dip" android:paddingTop="0.0dip" android:paddingRight="1.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/thumbnail" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/ic_action_badcall_blocked" android:scaleType="fitCenter" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/contactImagePlaceholder" />
        <TextView android:gravity="center" android:id="@id/call_time" android:clickable="false" android:layout_width="wrap_content" android:layout_height="?android:listPreferredItemHeight" android:text="@string/timestub" android:layout_toLeftOf="@id/panel" android:layout_centerVertical="true" style="@style/ListItemDate" />
        <ImageView android:gravity="center" android:id="@id/panel" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:visibility="invisible" android:clickable="false" android:layout_width="16.0dip" android:layout_height="?android:listPreferredItemHeight" android:src="@drawable/ic_action_overflow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/detail" />
        <LinearLayout android:orientation="vertical" android:id="@id/phone" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:layout_toLeftOf="@id/call_time" android:layout_toRightOf="@id/thumbnail" android:layout_centerVertical="true">
            <TextView android:ellipsize="end" android:gravity="left" android:id="@id/contact_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/textstub" android:maxLines="1" android:singleLine="true" style="@style/ListItemTextTitle" />
            <TextView android:gravity="left" android:id="@id/phone_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mobile" style="@style/ListItemTextSecondLine" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/additional_options_panel" android:paddingBottom="0.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip">
        <ImageButton android:id="@id/panel_message_btn" android:background="@android:color/transparent" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_messages_on" android:layout_weight="1.0" android:contentDescription="@string/pane_message" />
        <ImageButton android:id="@id/panel_call_btn" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_call_device" android:layout_weight="1.0" android:contentDescription="@string/pane_message" />
        <ImageButton android:id="@id/panel_block_btn" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_action_toblacklist" android:layout_weight="1.0" android:contentDescription="@string/pane_block" />
        <ImageButton android:id="@id/panel_white_btn" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_action_towhitelist" android:layout_weight="1.0" android:contentDescription="@string/pane_white" />
        <ImageButton android:id="@id/panel_edit_btn" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_contact" android:layout_weight="1.0" android:contentDescription="@string/pane_edit" />
        <ImageButton android:id="@id/panel_complaint_btn" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="@dimen/small_button_height" android:src="@drawable/ic_frame" android:layout_weight="1.0" android:contentDescription="@string/pane_complaint" />
    </LinearLayout>
</LinearLayout>