<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="14.0sp" android:textColor="@color/colorAccent" android:id="@id/create_account_pre_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/create_account_subtitle" android:fontFamily="@font/google_sans_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/create_account_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_account_title" android:fontFamily="@font/google_sans_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_pre_title" />
        <TextView android:textSize="14.0sp" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/create_account_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="64.0dip" android:text="@string/create_account_text" android:fontFamily="@font/google_sans_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_title" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/create_account_subtitle1" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/create_account_subtitle1" android:fontFamily="@font/google_sans_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_account_text" />
        <ImageButton android:id="@id/login_with_fb_btn" android:background="@drawable/ic_fb_states" android:padding="6.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginBottom="50.0dip" android:contentDescription="@string/facebook" app:layout_constraintBottom_toTopOf="@id/create_account_agree_with_privacy_policy" app:layout_constraintEnd_toStartOf="@id/login_with_google_tv" app:layout_constraintStart_toStartOf="parent" />
        <ImageButton android:id="@id/login_with_google_tv" android:background="@drawable/ic_google_states" android:padding="6.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginBottom="50.0dip" android:contentDescription="@string/google" app:layout_constraintBottom_toTopOf="@id/create_account_agree_with_privacy_policy" app:layout_constraintEnd_toStartOf="@id/create_account_sign_in" app:layout_constraintStart_toEndOf="@id/login_with_fb_btn" />
        <ImageButton android:id="@id/create_account_sign_in" android:background="@drawable/ic_custom_states" android:padding="6.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginBottom="50.0dip" android:contentDescription="@string/field_email" app:layout_constraintBottom_toTopOf="@id/create_account_agree_with_privacy_policy" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/login_with_google_tv" />
        <TextView android:textSize="12.0sp" android:textColor="@color/colorAccent" android:textColorLink="@color/colorAccent" android:gravity="center" android:id="@id/create_account_agree_with_privacy_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/create_account_agree_with_privacy_policy_social" android:fontFamily="@font/google_sans_light" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@id/create_account_agree_login_trouble" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="12.0sp" android:textColor="@color/colorAccent" android:textColorLink="@color/colorAccent" android:id="@id/create_account_agree_login_trouble" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/sign_in_agree_login_trouble" android:fontFamily="@font/google_sans_light" android:textAlignment="center" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>