<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fragment_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/top_nav" />
    <ListView android:id="@android:id/list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:dividerHeight="0.0dip" android:fastScrollEnabled="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:gravity="center" android:id="@id/ask_for_permission_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/allow_contact_permission_title" style="@style/permissions_title" />
        <TextView android:ellipsize="none" android:gravity="center" android:id="@id/empty" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/msg_listEmpty" style="@style/standard_color_and_text_size" />
        <Button android:layout_gravity="center" android:id="@id/ask_for_permission_btn" android:paddingLeft="32.0dip" android:paddingRight="32.0dip" android:visibility="gone" android:layout_width="wrap_content" android:text="@string/btn_cc_allow_contacts_permission" android:layout_centerHorizontal="true" style="@style/welcome_page_button" />
    </LinearLayout>
</LinearLayout>